// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuDetailsCards renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuDetailsCards
    config={
      Array [
        Object {
          "details": "You have sales worth SGD 80,586.54 in last 30 days.",
          "id": 1,
          "pinned": true,
          "title": "Total Sales in November?",
        },
        Object {
          "details": "You have not sold anything this week or you have not uploaded your invoices.",
          "id": 2,
          "pinned": false,
          "title": "Total Sales this week",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <WithStyles(CardContent)
          className="card-content"
        >
          <h4
            className="details-title"
          />
          <p
            className="details-data"
          />
        </WithStyles(CardContent)>,
        <WithStyles(Divider) />,
        <WithStyles(CardActions)
          className="card-action"
        >
          <WithStyles(Button)
            className="card-action-button"
            color="secondary"
          >
            UNPIN IT
          </WithStyles(Button)>
        </WithStyles(CardActions)>,
      ],
      "className": "card-wrapper",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <h4
              className="details-title"
            />,
            <p
              className="details-data"
            />,
          ],
          "className": "card-content",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "className": "details-title",
            },
            "ref": null,
            "rendered": null,
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "className": "details-data",
            },
            "ref": null,
            "rendered": null,
            "type": "p",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <WithStyles(Button)
            className="card-action-button"
            color="secondary"
          >
            UNPIN IT
          </WithStyles(Button)>,
          "className": "card-action",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "UNPIN IT",
            "className": "card-action-button",
            "color": "secondary",
          },
          "ref": null,
          "rendered": "UNPIN IT",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <WithStyles(CardContent)
            className="card-content"
          >
            <h4
              className="details-title"
            />
            <p
              className="details-data"
            />
          </WithStyles(CardContent)>,
          <WithStyles(Divider) />,
          <WithStyles(CardActions)
            className="card-action"
          >
            <WithStyles(Button)
              className="card-action-button"
              color="secondary"
            >
              UNPIN IT
            </WithStyles(Button)>
          </WithStyles(CardActions)>,
        ],
        "className": "card-wrapper",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <h4
                className="details-title"
              />,
              <p
                className="details-data"
              />,
            ],
            "className": "card-content",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "details-title",
              },
              "ref": null,
              "rendered": null,
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "details-data",
              },
              "ref": null,
              "rendered": null,
              "type": "p",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <WithStyles(Button)
              className="card-action-button"
              color="secondary"
            >
              UNPIN IT
            </WithStyles(Button)>,
            "className": "card-action",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "UNPIN IT",
              "className": "card-action-button",
              "color": "secondary",
            },
            "ref": null,
            "rendered": "UNPIN IT",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Sales renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Sales />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "1",
    "nodeType": "function",
    "props": Object {
      "config": Object {
        "details": "You have sales worth SGD 80,586.54 in last 30 days.",
        "id": 1,
        "pinned": true,
        "title": "Total Sales in November?",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "1",
      "nodeType": "function",
      "props": Object {
        "config": Object {
          "details": "You have sales worth SGD 80,586.54 in last 30 days.",
          "id": 1,
          "pinned": true,
          "title": "Total Sales in November?",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    Object {
      "instance": null,
      "key": "2",
      "nodeType": "function",
      "props": Object {
        "config": Object {
          "details": "You have not sold anything this week or you have not uploaded your invoices.",
          "id": 2,
          "pinned": false,
          "title": "Total Sales this week",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
